<resources>
    <string name="app_name">Exceptional</string>
    <string name="choose_an_exception">Choose which exception to throw</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1573592742907543</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="throw_exc_button">Throw an Exception!</string>
    <string name="give_exc_button">Give me an Exception!</string>
    <string name="set_exc_button">Geofence an Exception!</string>
    <string name="my_exceptions_text">My Exceptions</string>
    <string name="my_friends_text">My Friends</string>

    <string name="main_login_fragment_text">You have to login with Facebook to use this app.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_fragment_text">Hello user!</string>
    <string name="main_text">EXPECT THE EXCEPTIONS</string>

    <string name="exception_preferences">com.attilapalfi.exceptional.exception.ExceptionPreferences</string>
    <string name="friends_preferences">com.attilapalfi.exceptional.exception.FriendsPreferences</string>
    <string name="new_exception_text">You got a new Exception!</string>

    <string name="project_number">947608408958</string>
    <string name="backend_address">http://188.36.23.85:8090</string>

    <string name="title_activity_send_exception_list">SendExceptionList</string>
    <string name="title_activity_friend_chooser">FriendChooserActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="choose_victim">Choose your victim of Exception!</string>
    <string name="title_activity_show_notification">ShowNotificationActivity</string>
    <string name="title_activity_options">Options</string>

    <string name="main_welcome_before_name">Hello yolo</string>
    <string name="main_point_view_pre">You have incredible</string>
    <string name="main_point_view_post">points!</string>
    <string name="fragment_main_exception_history">Exception history</string>
    <string name="title_activity_friend_details">Friend Details</string>
    <string name="exc_history_row_from_city_prefix">From:</string>
    <string name="title_activity_exception_history">Exception history</string>
    <string name="title_activity_exception_type_chooser">ExceptionTypeChooserActivity</string>
    <string name="exc_history_row_to_city_prefix">To:</string>

    <string name="install_google_services">Please install or update Google Play Services to use this app.</string>
    <string name="google_services_not_found">Google Play Services not found. App won\'t work.</string>
    <string name="can_throw_location_pls">Can\'t throw the Exception, please enable location services.</string>
    <string name="submitter_text">"Submitter: "</string>
    <string name="voted_type_votes_text">"Votes: "</string>
    <string name="submit_voted_button_text">Submit</string>
    <string name="you_already_voted">You have already voted this week.</string>
    <string name="do_want_to_vote">Do you want to vote for this?</string>
    <string name="vote">Vote</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_vote">Failed to vote, sry.</string>
    <string name="already_submitted">You have already submitted this week</string>
    <string name="exception_submitment">Exception submitment</string>
    <string name="prefix">prefix:</string>
    <string name="prefix_hint">like com.soup.internal.</string>
    <string name="short_name">short name:</string>
    <string name="short_name_hint">like TooHotSoupException</string>
    <string name="description">description:</string>
    <string name="description_hint">Description.</string>
    <string name="prefix_end_with_dot_error">Prefix has to end with \'.\' character.</string>
    <string name="prefix_too_short_error">Prefix is too short.</string>
    <string name="prefix_too_long_error">Prefix is too long.</string>
    <string name="short_name_too_short_error">Short name is too short.</string>
    <string name="short_name_too_long_error">Short name is too long.</string>
    <string name="description_too_short_error">Description is too short.</string>
    <string name="description_too_long_error">Description is too long.</string>
    <string name="failed_to_submit">Lel, I failed to submit, sry</string>
    <string name="exceptions_syncd">Exceptions are synchronized!</string>
    <string name="failed_to_sync">Failed to synchronize exceptions.\nFuck, I\'m not very good at this.</string>
    <string name="failed_to_connect">Failed to connect to the server. Sry man.\n</string>
    <string name="successfully_thrown">successfully thrown to</string>
    <string name="failed_to_throw_1">Maaan I\'m really sorry, but I wasn\'t able to throw your shit.\n</string>
    <string name="failed_to_throw_2">Lol, your exception didn\'t fly to far away...\n</string>
    <string name="failed_to_connect_3">I did not connect to the server\n\n...for reasons.\n</string>
    <string name="no_exception_types_found">No exception types found.</string>
    <string name="failed_to_connect_to_gcm_servers">"Failed to connect to GCM servers: "</string>
    <string name="cant_get_location_pls_enable">Can\'t get device\'s location.\nPlease enable location services.</string>
    <string name="enable_location_services_to_throw">Enable location services and restart the application, to throw exceptions.</string>
    <string name="locaton_service_enabled_but_location_was_null">Location services is enabled, but location was null.</string>
    <string name="prefix_cant_start_with_dot_error">Prefix can\'t start with \'.\' character.</string>
    <string name="short_name_cant_start_dot_error">Short name can\'t start with \'.\' character.</string>
    <string name="title_activity_maps">Exception Map</string>
    <string name="exception_map">Exception Map</string>
    <string name="google_maps_key">AIzaSyCSwgwKHOuqBozM-JhhKYp6xnwFKs8xJrU</string>
    <string name="double_or_nothing">Double or nothing</string>
    <string name="question">Question:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="double_nothing_question_hint">like: Is Kotlin 100% interoperable with Java?</string>
    <string name="submit">Submit</string>
    <string name="throwException">Throw!</string>
    <string name="throw_question">Throw</string>
    <string name="exceptions_loading">Exceptions still loading...</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_answer_exception">Double or nothing</string>
    <string name="example_date">2015-03-14 18:49:23.732</string>
    <string name="too_long_question">Too long question.</string>
    <string name="too_short_question">Too short question.</string>
    <string name="question_ends_question">Questions end with question mark.</string>
    <string name="login_first">You have to login first!</string>
    <string name="failed_to_answer">Failed to send answer.</string>
    <string name="notif_sender_prefix">From:</string>
    <string name="points_for_you">Points for you:</string>
    <string name="points_for_friend">Points for friend:</string>
    <string name="you_still_have_to_answer">You still have to answer it.</string>
    <string name="friend_still_has_to_answer">Friend still has to answer it.</string>
    <string name="friend_aswered_correctly">Friend answered correctly.</string>
    <string name="friend_aswered_wrong">Friend answered wrong.</string>
    <string name="you_aswered_correctly">You answered correctly.</string>
    <string name="you_aswered_wrong">You answered wrong.</string>
</resources>
