<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/submit_prefix_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/exceptional_blue"
            android:text="@string/prefix"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_prefix_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <EditText
                android:id="@+id/submit_prefix_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prefix_hint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/submit_shortname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/exceptional_blue"
            android:text="@string/short_name"
            android:layout_below="@+id/input_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_shortname_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <EditText
                android:id="@+id/submit_shortname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/short_name_hint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/submit_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/exceptional_blue"
            android:text="@string/description"
            android:layout_below="@+id/input_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/submit_description_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <EditText
                android:id="@+id/submit_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"/>

    </android.support.design.widget.TextInputLayout>


</RelativeLayout>