<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.attilapalfi.exceptional.ui.main.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_text"
        android:id="@+id/mainText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/myMainImageView"
        android:layout_below="@+id/mainText"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/mainNameTextView"
        android:layout_alignTop="@+id/myMainImageView"
        android:layout_toRightOf="@+id/myMainImageView"
        android:layout_toEndOf="@+id/myMainImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/mainPointTextView"
        android:layout_below="@+id/mainNameTextView"
        android:layout_toRightOf="@+id/myMainImageView"
        android:layout_toEndOf="@+id/myMainImageView" />


    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/throw_exc_button"
        android:id="@+id/throwExcBtn"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="throwExceptionClicked" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/give_exc_button"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/throwExcBtn"
        android:layout_alignStart="@+id/throwExcBtn"
        android:onClick="giveMeExcClicked" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/set_exc_button"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="61dp" />


</RelativeLayout>
