<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="4dp" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/question_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <TextView
                android:id="@+id/question_exception_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="2dp"
                android:text="ShortNameException"
                android:textSize="20sp"
                android:textColor="#e3002b4c"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/question_image"
                android:layout_toEndOf="@+id/question_image"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:layout_alignBottom="@+id/question_image"/>

        <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, is this the question text?"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textSize="15sp"
                android:textColor="#548600"
                android:layout_below="@+id/question_image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        <Button
                android:id="@+id/question_yes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_below="@+id/question_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        <Button
                android:id="@+id/question_no"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_alignTop="@+id/question_yes"
                android:layout_toLeftOf="@+id/question_yes"
                android:layout_toStartOf="@+id/question_yes"/>

        <TextView
                android:id="@+id/question_from_pref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exc_history_row_from_city_prefix"
                android:layout_below="@+id/question_no"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <TextView
                android:id="@+id/question_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Péla Palás, Budapest"
                android:textColor="#000000"
                android:layout_alignTop="@+id/question_from_pref"
                android:layout_toRightOf="@+id/question_from_pref"
                android:layout_toEndOf="@+id/question_from_pref"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp" />

        <TextView
                android:id="@+id/question_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/example_date"
                android:layout_below="@+id/question_from_pref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>