<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="4dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_text"
                android:id="@+id/mainText"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/myMainImageView"
                android:src="@drawable/logo"
                android:layout_below="@+id/mainText"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:textSize="20sp"
                android:id="@+id/mainNameTextView"
                android:layout_alignTop="@+id/myMainImageView"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/myMainImageView"
                android:layout_toEndOf="@+id/myMainImageView"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:textSize="20sp"
                android:id="@+id/mainPointTextView"
                android:layout_below="@+id/mainNameTextView"
                android:layout_alignLeft="@+id/mainNameTextView"
                android:layout_alignStart="@+id/mainNameTextView"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="exceptionHistoryClicked"
                android:text="@string/fragment_main_exception_history"
                android:id="@+id/exceptionHistory"
                android:layout_below="@+id/myMainImageView"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/mapButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="exceptionMapClicked"
                android:text="@string/exception_map"
                android:layout_below="@+id/exceptionHistory"
                android:layout_alignLeft="@+id/exceptionHistory"
                android:layout_alignStart="@+id/exceptionHistory"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>